# PointStream

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =0.10.7  A1_segment_with_sam.py  A1_segment_with_yolo.py  A2_extract_poses_from_crops.py  A3_create_masked_crops_and_skeletons.py  ACM-Reference-Format.bst  ADAPTIVE_ENHANCEMENTS_SUMMARY.md  AGENTS.md  ARCHITECTURE.md  B1_video_panorama.py  CHANGELOG.md  CLAUDE.md  CONFIG_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  ENHANCED_SOLUTIONS_SUMMARY.md  ENHANCED_TRAINING_SUMMARY.md  EVALUATION_IMPLEMENTATION.md  ExtractPlayers.py  FINAL_SYSTEM_ANALYSIS.md  FIX_SUMMARY.md  IMPLEMENTATION_RESULTS.md  LICENSE  Makefile  README.md  README_object_segmentation.md  README_scene_splitter.md  README_streamlined.md  TODO.md  TURBONEXT_README.txt  VideoFrame.py  add_build_pairs.py  analyze_visual_quality.py  background_client.py  background_experiment_semantic.py  (+88 more)
.agents/rules/: pointstream.md
.claude/: settings.json
.claude/agents/: paper-editor.md  pipeline-runner.md
.claude/hooks/: guard-long-run.py  guard-rm.py  paper-sync-reminder.py
.github/: copilot.instructions.md
.github/instructions/: pointstream.instructions.md
.github/workflows/: ci.yml  release.yml
README/: README_inpainting_config.md  README_object_segmentation.md
client/: client.py  config.ini  environment.yml  requirements.txt
client/models/: __init__.py  animal_cgan.py  animal_cgan_image.py  human_cgan.py  human_cgan_image.py  model_factory.py  other_cgan.py  other_cgan_image.py
client/scripts/: background_reconstructor.py  demuxer.py  frame_composer.py  model_trainer.py  object_generator.py  quality_assessor.py  video_assembler.py
config/: QUICKSTART_CONFIGS.md  README.md  baseline_residual_only.yaml  caption.yaml  default.yaml  genai_animate_anyone.yaml  low_bandwidth_optimization.yaml  mock_fast.yaml  tier_balanced.yaml  tier_fast.yaml  tier_quality.yaml
config/benchmarks/: ablation_background_layer.yaml  ablation_panorama_quality.yaml  ablation_racket_heuristics.yaml  ablation_residual_compression.yaml  example_panorama_quality.yaml
dwpose/: onnxpose.py  util.py  wholebody.py
models/: README.md
old/: README.md  evaluate_experiments.py  pointstream_client.py  pointstream_server.py  requirements.txt
old/dwpose/: __init__.py  onnxdet.py  util.py
paper/: main.tex  ref.bib  usenix2019_v3.sty
paper/backup/: main.tex  main_for_MM.tex
player/: index.html
player/assets/: server.py
pointstream/: __init__.py  cli.py  config.py  main.py
pointstream/client/: reconstructor.py
pointstream/codecs/: __init__.py  av1_encoder.py
pointstream/core/: representation.py  scene.py  tracker.py
pointstream/evaluation/: __init__.py  evaluator.py  metrics.py
pointstream/models/: mmpose_handler.py  mock_mmpose_handler.py  propainter_manager.py  rigid_keypoint_extractor.py  segmentation_handler.py  yolo_handler.py
pointstream/pipeline/: stage_01_analyzer.py  stage_02_detector.py  stage_03_background.py  stage_04_foreground.py
pointstream/pipelines/: base.py  inpainting.py  object_detection.py  pose_estimation.py  scene_detection.py  server.py
pointstream/scripts/: __init__.py  run_client.py  run_server.py  simple_train.py  train.py  train_enhanced.py
pointstream/utils/: adaptive_metrics.py  advanced_tracking.py  (+6 more)
reports/: 10_dataset_and_end_to_end_evaluation_report.md  11_hnerv_wrc_v2_plan.md  12_multi_condition_controlnet_plan.md  13_g2_campaign_completion_plan.md  1_spade4tennis_plan.md  2_scene_classification_research.md  3_architecture_refactor_research.md  4_animate_anyone_integration_research.md  5_genai_temporal_consistency_research.md  6_action_matrix.md  7_implementation_plan.md  8_residual_guarantee_benchmarks_report.md  9_codec_baselines_report.md  REPORTS.md
scripts/: __init__.py  _compat_patches.py  analyze_genai_divergence.py  benchmark_mask_codecs.py  benchmark_matrix.py  benchmark_player_backends.py  build_pix2pix_dataset.py  check_coverage_gate.py  client.py  codec_baseline_sweep.py  compare_decoded_dirs.py  config.py  dataset_processing.py  debug_dataloader.py  debug_panorama.py  debug_residual_shadow.py  decorators.py  diagnose_bg_divergence.py  download_weights.py  duplicate_filter.py  environment_training.yml  error_handling.py  eval_checkpoint.py  evaluate_experiments.py  evaluator.py  extractor.py  hnerv_baseline.py  keypointer.py  prepare_student_dataset.py  process_dataset.py  run_genai_divergence_analysis.py  run_mock_pipeline.py  run_pipeline.py  run_scene_analysis.py  saver.py  scratch_dump_conditions.py  segmenter.py  select_probe_set.py  semantic_classifier.py  server.py  (+11 more)
server/: config.ini  server.py
src/: __init__.py  experiment_evaluation.py  main.py
tests/: conftest.py  mock_components.py  test_actor_bbox_geometry.py  test_actor_mask_metadata.py  test_actor_pipeline.py  test_anchor_cache.py  test_animate_anyone_runtime.py  test_animate_anyone_runtime_coverage.py  test_background.py  test_background_modeler_masked_median.py  test_ball_tracking.py  test_benchmark_mask_codecs.py  test_benchmark_matrix.py  test_check_coverage_gate.py  test_codec_baseline_sweep.py  test_config.py  test_controlnet_engine.py  test_core.py  test_coverage_pipeline_helpers.py  test_coverage_utilities.py  test_dag.py  test_decoder.py  test_decoder_genai_debug_parity.py  test_download_weights.py  test_encoder_pipeline.py  test_end_to_end.py  test_end_to_end_mock.py  test_eval_checkpoint.py  test_eval_decoder_parity.py  test_evaluation.py  test_execution_pool.py  test_experiment_evaluation.py  test_experiment_evaluation_coverage.py  test_experiment_evaluation_fvd.py  test_experiment_evaluation_pairing.py  test_fvd.py  test_fvd_integration.py  test_genai_baseline.py  test_genai_compositor.py  test_genai_node.py  (+41 more)
tools/: check_architecture.py
utils/: config.py  decorators.py  error_handling.py  pose_visualization.py  training_cache.py  vector_utils.py
(+86 files in other folders)
