[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointstream"
version = "0.1.0"
description = "A Content-Aware Neural Video Codec"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PointStream Team", email = "contact@pointstream.dev"}
]
keywords = ["video", "codec", "neural", "compression", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "ultralytics>=8.0.0",
    "numpy<2.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "transformers==4.36.2",
    "openmim>=0.3.9",
    "scenedetect[opencv]>=0.6.0",
    "google-generativeai",
    "autodistill",
    "autodistill-grounded-sam",
    "natsort>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "isort>=5.12.0",
]
mmlab = [
    "mmcv==2.1.0",
    "mmdet==3.2.0", 
    "mmpose==1.3.2",
    "mmpretrain",
]

[project.urls]
Homepage = "https://github.com/pointstream/pointstream"
Repository = "https://github.com/pointstream/pointstream"
Documentation = "https://pointstream.readthedocs.io"
"Bug Tracker" = "https://github.com/pointstream/pointstream/issues"

[project.scripts]
pointstream-server = "pointstream.cli:run_server"
pointstream-client = "pointstream.cli:run_client"
pointstream-train = "pointstream.cli:train"
pointstream-simple-train = "pointstream.cli:simple_train"

[tool.setuptools.packages.find]
where = ["."]
include = ["pointstream*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | artifacts
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pointstream"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
