[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointstream"
version = "0.1.0"
description = "Mock-first scaffold for an object-centric semantic neural codec pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "msgpack==1.1.0",
  "numpy==1.26.4",
  "opencv-python-headless==4.10.0.84",
  "pydantic==2.11.2",
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pre-commit==4.1.0",
  "ruff==0.11.2",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "scripts"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = false
no_implicit_optional = true
