[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointstream"
version = "0.1.0"
description = "Mock-first scaffold for an object-centric semantic neural codec pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "kornia==0.7.4",
  "msgpack==1.1.0",
  "numpy==1.26.4",
  "opencv-python-headless==4.10.0.84",
  "PyYAML==6.0.2",
  "ultralytics==8.4.6",
  "pydantic==2.11.2",
  "diffusers==0.30.3",
  "transformers==4.46.3",
  "accelerate==0.32.1",
  "omegaconf==2.3.0",
  "einops==0.8.1",
  "scikit-learn==1.3.2",
  "scipy==1.10.1",
  "mlflow==2.14.3",
  "controlnet-aux==0.0.9",
  "decord==0.6.0",
  "onnxruntime-gpu==1.16.3",
  "mediapipe==0.10.5",
  "moore-animateanyone @ git+https://github.com/emanuele-artioli/Moore-AnimateAnyone.git@master"
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pre-commit==4.1.0",
  "pytest==9.0.2",
  "ruff==0.11.2",
  "types-PyYAML==6.0.12.20260518",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests", "scripts"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = false
no_implicit_optional = true

[tool.coverage.run]
source = ["src", "scripts"]

[tool.coverage.report]
omit = [
  "config-*.py",
  "*/config-*.py",
  "src/decoder/animate_anyone_runtime.py",
  "src/decoder/genai_compositor.py",
  "src/decoder/decoder_renderer.py",
  "src/encoder/actor_components.py",
  "src/encoder/ball_extractor.py",
  "src/encoder/residual_calculator.py",
  "src/encoder/segmentation_ball_extractor.py",
  "src/shared/genai_debug.py",
  "src/decoder/controlnet_engine.py",
  "src/decoder/pix2pix_engine.py",
  "src/decoder/spade4tennis_engine.py",
  "src/shared/player_extraction.py",
  "src/shared/racket_heuristic.py",
  "src/shared/tennis_dataset.py",
  "scripts/*.py",
  "scripts/benchmark_player_backends.py",
]
